Wed Jul 28 19:37:33 2010  NAKAMURA Usaku  <usa@ruby-lang.org>

	* win32/Makefile.sub (config.h): VC6 or later have stddef.h.

	* include/ruby/missing.h: need to include stddef.h for size_t.

	* include/ruby/missing.h: shouldn't declare as dllimport when building
	  ruby itself (for Windows).

Wed Jul 28 17:11:48 2010  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* missing/*.c: include missing.h

Wed Jul 28 09:38:03 2010  NAKAMURA Usaku  <usa@ruby-lang.org>

	* cont.c: typos.

Wed Jul 28 09:24:43 2010  NARUSE, Yui  <naruse@ruby-lang.org>

	* cont.c: (RB_PAGE_SIZE): renamed from PAGE_SIZE. [ruby-dev:41870]

	* cont.c: (RB_PAGE_MASK): renamed from PAGE_MASK.

Tue Jul 27 23:09:09 2010  Tanaka Akira  <akr@fsij.org>

	* ext/pathname/pathname.c (path_taint): use rb_obj_taint.
	  (path_untaint): Pathname#untaint translated from
	  pathname.rb.

Tue Jul 27 18:59:15 2010  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* lib/mkmf.rb (have_framework): added.

Tue Jul 27 18:33:42 2010  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* defines.h, intern.h, missing.h, ruby.h, st.h, util.h: include
	  config.h and defines.h for autoconf macros.

Tue Jul 27 16:27:38 2010  NAKAMURA Usaku  <usa@ruby-lang.org>

	* numeric.c (flo_cmp): typo.

Tue Jul 27 16:09:12 2010  NARUSE, Yui  <naruse@ruby-lang.org>

	* class.c, compile.c, dir.c, file.c, iseq.c, parse.y, random.c:
	  clean unused-value warnings.

	* cont.c, process.c, vm_exec.h: clean cast warnings.

Mon Jul 26 22:34:37 2010  Tanaka Akira  <akr@fsij.org>

	* ext/pathname/pathname.c (path_taint): Pathname#taint translated from
	  pathname.rb.

Mon Jul 26 18:18:09 2010  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* configure.in (config.h): add include guard.

	* win32/Makefile.sub, bcc32/Makefile.sub (config.h): ditto.

Mon Jul 26 14:38:06 2010  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* configure.in (XCFLAGS): missing.h needs config.h.

Mon Jul 26 14:08:47 2010  NAKAMURA Usaku  <usa@ruby-lang.org>
