@@ -1,3 +1,8 @@
+Wed Jul 28 22:23:59 2010  Tanaka Akira  <akr@fsij.org>
+
+	* ext/pathname/pathname.c (path_eq): Pathname#{==,===,eql?} translated
+	  from pathname.rb.
+
 Wed Jul 28 19:37:33 2010  NAKAMURA Usaku  <usa@ruby-lang.org>
 
 	* win32/Makefile.sub (config.h): VC6 or later have stddef.h.
